2007-07-03  Naba Kumar  <naba.kumar@gnome.org>

	* libanjuta/anjuta-preferences-dialog.c: (compare_pref_page_func),
	(anjuta_preferences_dialog_init): Sort preferences pages on title.

2007-07-03  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/document-manager/anjuta-document-manager.ui:
	* plugins/language-support-cpp-java/anjuta-language-support-cpp-java.ui:
	* src/action-callbacks.c:
	* src/action-callbacks.h:
	* src/anjuta-actions.h:
	* src/anjuta-app.c: (anjuta_app_instance_init),
	(anjuta_app_install_preferences):
	* src/anjuta.glade:
	* src/anjuta.ui: Moved plugins and shortcuts settings inside
	General preferences page. Move preferences menu from Settings to
	Edit submenu. And got rid of Settings submenu.

2007-07-02  Vincent Geddes  <vgeddes@gnome.org>

	* plugins/glade/plugin.c (on_close_activated): Update for glade3 svn trunk.
	
2007-07-02  Naba Kumar  <naba.kumar@gnome.org>

	* TODO.tasks: Increased bounty for on-demand preferences task to $150
	as discussed and agreed with James Liggett.

	Patch from James Liggett  <jrliggett@cox.net>:

	* configure.in:
	* libanjuta/anjuta-plugin-manager.c:
	(on_activated_plugin_objects_foreach),
	(anjuta_plugin_manager_get_active_plugin_objects):
	* libanjuta/anjuta-plugin-manager.h:
	* libanjuta/anjuta-plugin.c: (anjuta_plugin_activate),
	(anjuta_plugin_deactivate):
	* libanjuta/anjuta-preferences-dialog.c:
	(anjuta_preferences_dialog_finalize),
	(anjuta_preferences_dialog_class_init), (add_category_columns),
	(anjuta_preferences_dialog_init), (anjuta_preferences_dialog_new),
	(anjuta_preferences_dialog_remove_page):
	* libanjuta/anjuta-preferences.c: (property_destroy),
	(unregister_preferences_key), (register_callbacks),
	(preferences_foreach_callback), (connect_prop_to_object),
	(anjuta_preferences_register_property_raw),
	(anjuta_preferences_register_property_custom),
	(anjuta_preferences_foreach), (anjuta_preferences_add_page),
	(anjuta_preferences_remove_page),