@@ -1,3 +1,9 @@
+2007-07-04  Naba Kumar  <naba.kumar@gnome.org>
+
+	Patch from James Liggett  <jrliggett@cox.net>:
+	* plugins/editor/Makefile.am, scripts/build-schemas.mk:
+	Installed editor preferences schemas. Fixes bug #453463.
+
 2007-07-03  Naba Kumar  <naba.kumar@gnome.org>
 
 	* libanjuta/anjuta-preferences-dialog.c: (compare_pref_page_func),
